public/sandpit6.css
#currentSandpit{
	position: fixed;
	top:2px;
	left:10px;
	color:white;
	background:black
}

/* adjust space between user divs  */
.card{
	border:none;
}

/*  font on sandpit movie*/
.card-body{
	color: black;
}

.card-img-top{
opacity: 1;
display: block;
width: 100%;
height: 350px;
transition: .5s ease;
backface-visibility: hidden;
}

/* fade out image when hovered over */
.imgContainer:hover .card-img-top {
  opacity: 0.3;
}
/* display more button when image hovered over */
.middle {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.middleText {
  background-color: black;
  color: white;
  font-size: 16px;
  padding: 16px 32px;
}

/* fade in the display more button above */
.imgContainer:hover .middle {
  opacity: 1;
}

/* Pop up box styling in user sandpit page */
.modal2 {
display: none; /* Hidden by default */
position: fixed; /* Stay in place */
z-index: 3; /* Sit on top */
left: 0;
top: 0;
width: 100%; /* Full width */
height: 100%; /* Full height */
overflow: auto; /* Enable scroll if needed */
background-color: rgb(0,0,0); /* Fallback color */
background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content2 {
background-color: black;
margin: 15% auto; /* 15% from the top and centered */
border: 1px solid #888;
width: 80%; /* Could be more or less, depending on screen size */
height: 50%
}

/* style hovering on see mo */
p.font-weight-bold:hover{
	color: blue;
	text-decoration: underline black;
}


.movieDetailsOuter{
	height:100%;
}

/* styling for moving details inside the pop up */
.movieDetails{
	background:white;
	height:80%;
	width: 100%;
	overflow-y: scroll;
	
}

.movieDetails div {
	color:black
}


.sandpitRatings{
	width:100%
}

.ratingsImage{
	height:70%;
	width:100%;
}

.trailerOuterDiv{
	background:black;
}

.noTrailer{
	height:400px;
	width:400px;
	background:white;
}

/* Logic to display how many stars user has rated a film */
span[n="1"]:before {
   content: "☆";
   display:block;
}

span[n="2"]:before {
   content: "☆☆";
	display:block;
}

span[n="3"]:before {
   content: "☆☆☆";
	display:block;
}

span[n="4"]:before {
   content: "☆☆☆☆";
	display:block;
}

span[n="5"]:before {
   content: "☆☆☆☆☆";
	display:block;
}

/* remove button style */
input[type = submit].sandpitRemove{
	position: relative;
	/* bottom:-100%; */
	background-color: red;
}

#inlineFormCustomSelectPref{
width:30%}

.removeMovieModal h5 {
	color:black;
}


.modal-backdrop{
	z-index: -5;
}

/* to get hover hand over clickable elements */
.hoverHand{
	cursor:pointer
}

.hoverHand2{
	cursor:pointer
}

.bolderSandpit{
	color:black;
	font-weight:800;
	font-size: 2em;
}

